--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         class="flex flex-col border-r border-gray-200 dark:pintree-border-gray-800 bg-white px-4 h-full font-semibold dark:pintree-bg-gray-900">
         <div class="flex p-0 h-16 shrink-0 items-center">
           <img class="pl-2 h-8 w-auto" src="assets/logo.svg" alt="Pintree">
-          <a href="" class="ml-4 font-extrabold text-2xl dark:text-white">Pintree</a>
+          <a href="" class="ml-4 font-extrabold text-2xl dark:text-white">Laoygzs</a>
         </div>
         <div class="flex flex-1 flex-col overflow-y-auto no-scrollbar p-1 cursor-pointer">
           <div id="sidebar" class="flex flex-1 flex-col">
@@ -145,7 +145,7 @@
               <button id="clearSearchButton" class="text-sm text-gray-500 mr-4 rounded hidden">Clear</button>
             </div>
           </div>
-          <a href="" class="lg:hidden ml-4 font-extrabold text-2xl dark:text-white">Pintree</a>
+          <a href="" class="lg:hidden ml-4 font-extrabold text-2xl dark:text-white">Laoygzs</a>
           <div class="relative">
             <button id="themeToggleButton" type="button" aria-label="Switch theme"
               class="group rounded-full bg-white/90 px-3 py-2 shadow-lg shadow-zinc-800/5 ring-1 ring-zinc-900/5 backdrop-blur transition dark:pintree-bg-gray-900 dark:ring-white/10 dark:hover:ring-white/20">
@@ -224,7 +224,7 @@
                     </clipPath>
                   </defs>
                 </svg>
-                Pintree
+                Laoygzs
               </a>
             </p>
           </div>
